# high-performance-logger

./: .clang-format  .gitignore  CMakeLists.txt  README.md  autobuild.sh  conanfile.py
benchmark/: CMakeLists.txt  benchmark.cpp
decode/: CMakeLists.txt  decode.cpp  decode_formatter.cpp  decode_formatter.h
examples/: CMakeLists.txt  logger_example.cpp
src/: CMakeLists.txt  defer.h  internal_log.h  log_common.h  log_extension_handle.h  log_factory.cpp  log_factory.h  log_handle.cpp  log_handle.h  log_msg.h  logger.h  space.h  timer_count.h
src/compress/: compress.h  zlib_compress.cpp  zlib_compress.h  zstd_compress.cpp  zstd_compress.h
src/context/: context.h  executor.cpp  thread_pool.h
src/crypt/: aes_crypt.cpp  aes_crypt.h  crypt.cpp  crypt.h
src/formatter/: default_formatter.cpp  default_formatter.h  effective_formatter.cpp  effective_formatter.h  formatter.h
src/mmap/: mmap_handle.cpp  mmap_handle.h  mmap_handle_linux.cpp
src/sinks/: console_sink.cpp  console_sink.h  effective_sink.cpp  effective_sink.h  sink.h
src/utils/: file_util.cpp  file_util.h  sys_util_linux.cpp
tests/: CMakeLists.txt  test_compress.cpp  test_context.cpp  test_crypt.cpp  test_log_factory.cpp  test_mmap.cpp  test_thread_pool.cpp  tset_main.cpp
